--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_save_draft.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_save_draft.html
@@ -305,6 +305,7 @@
             'json': json,
             'stringalpha': genericModalViewModel.businessPOJO().report_name(),
             'stringbeta':genericModalViewModel.businessPOJO().buildTag(),
+            'deleted':false,
             "id":genericModalViewModel.businessPOJO().id()
           }
       };
@@ -321,6 +322,7 @@
         'json': json,
         'stringalpha': genericModalViewModel.businessPOJO().report_name(),
         'stringbeta':genericModalViewModel.businessPOJO().buildTag(),
+        'deleted':false,
         'username': UserPOJO.user.userName
       }
       var data = {
