--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content_old.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content_old.html
@@ -28,13 +28,11 @@
           <button title="New demo" type="button" onclick="test_copy()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-paint-brush"></i></button>
           <button title="" type="button" onclick="test_display()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
           <button title="" type="button" onclick="test_undisplay()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
+          <button id="button_save" title="Save(shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
+
           <button title="Insert a chart cell(shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
 
         </div>
-      </div>
-      <div class="card-body flat-matrix">
-        
-
       </div>
     </div>
   </div>
