--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
@@ -19,119 +19,62 @@
     background-color: #2c3e50;
   }
 </style>
-<div class="row">
-  <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          <i class="fa fa-diamond">&nbsp;TBD&nbsp;&nbsp;&nbsp;</i>
-          <button title="New demo" type="button" onclick="test_copy()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-paint-brush"></i></button>
-          <button title="" type="button" onclick="test_display()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
-          <button title="" type="button" onclick="test_undisplay()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
-          <button id="button_save" title="Save(shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
-
-          <button title="Insert a chart cell(shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
-
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="seperate_div_class" style="margin-top:58px"></div>
-
-<div class="row">
-  <div class="col-md-12">
-    <div class="dragContainer" id='dragContainer_div'>
-      <div style="padding:0px 0px;min-height:760px">
-        <div class="grid-stack" data-gs-width="12" data-gs-animate="yes" style="margin:0px -9px">
-
-
-        </div>
-      </div>
-      <!-- <div style="padding:60px 50px;min-height:760px">
-        <div class="grid-stack" data-gs-width="12" data-gs-animate="yes" >
-
-
-        </div>
-      </div> -->
-    </div>
-  </div>
-</div>
-
-<hr>
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 0px;display:none">
-    <div class="card card-mini">
+<div id="dashboard_content_div">
+  <div class="row" id="menubar_div" style="position:fixed;top:118px;left: 180px;right: 0px;z-index:100006;margin:0px 15px;">
+    <div class="col-md-12">
       <div class="card card-mini">
-        <div class="card-body">
-          <form class="form-horizontal" id="tools">
-            <div class="form-group">
-              <label class="col-sm-2 control-label" style="text-align:right">
-                <span style="font-weight: bold;font-size: 16px;">Name</span>
-                <i class="fa fa-asterisk" style="color: #E74C3C;"></i>
-              </label>
-              <div class="col-sm-4">
-                <p class="form-control-static">Matrix Component</p>
-              </div>
-              <label class="col-sm-2 control-label" style="text-align:right">
-                <span style="font-weight: bold;font-size: 16px;">Version</span>
-                <i class="fa fa-asterisk" style="color: #E74C3C;"></i>
-              </label>
-              <div class="col-sm-4">
-                <p class="form-control-static">3.14</p>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label" style="text-align:right">
-                <span style="font-weight: bold;font-size: 16px;">Owner</span>
-              </label>
-              <div class="col-sm-4">
-                <p class="form-control-static">BUPT Scripter Team</p>
-              </div>
-              <label class="col-sm-2 control-label" style="text-align:right">
-                <span style="font-weight: bold;font-size: 16px;">Description</span>
-              </label>
-              <div class="col-sm-4">
-                <p class="form-control-static">团队女神多,所以产出高</p>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label" style="text-align:right">
-                <span style="font-weight: bold;font-size: 16px;">Slogon</span>
-              </label>
-              <div class="col-sm-10">
-                <p class="form-control-static">What you are you do not see, what you see is your shadow. I cannot choose the best. the best chooses me. That i exist is a perpetual surprise which is life. </p>
-              </div>
-            </div>
-          </form>
+        <div class="card-header">
+          <div class="card-title">
+            <i class="fa fa-diamond">&nbsp;Dashboard Editor&nbsp;&nbsp;&nbsp;</i>
+            <button title="New" type="button" onclick="" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-paint-brush"></i></button>
+            <button title="" type="button" onclick="add_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
+            <button title="" type="button" onclick="remove_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
+            <button id="button_save" title="Save(shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
+            <button title="Insert a chart cell(shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
+
+            <span class="pull-right" style="margin-right:18px">
+            <button type="button" class="btn btn-warning" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:hasNewContent">Modified</button>
+            <button type="button" class="btn btn-danger" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!name()">Unsaved</button>
+            <button type="button" class="btn btn-success" style="padding: 6px 12px;margin-bottom: 0px;display:" data-bind="visible:name()">Saved as: <span data-bind="text:name"></span></button>
+            </span>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<hr>
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 0px;display:none">
-    <div class="card card-mini" style="height: 90%;">
-      <div class="card-body" style="height: 100%;">
-        <div id="tutorial_chart" style="width: 100%;height:100%;">
+  <div id="report_content_seperate_div" class="seperate_div_class" style="margin-top:188px"></div>
 
+  <div class="row">
+    <div class="col-md-12" style="margin-top:30px">
+      <div class="dragContainer" id='dragContainer_div'>
+        <div id="workbench_div" style="padding:0px 0px;min-height:760px">
+          <div class="grid-stack" data-gs-width="12" data-gs-animate="yes" style="margin:0px -9px">
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 0px;display:none">
+      <div class="card card-mini" style="height: 90%;">
+        <div class="card-body" style="height: 100%;">
+          <div id="tutorial_chart" style="width: 100%;height:100%;"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
-<div style="display:none">
-  <div class="grid-stack-item-content" id='draggableTemplate'>
-    <div class="card card-mini" style="box-shadow: none;height:90%">
-      <div class="card-header" style="padding: 8px 0px 0px 16px;">
-        <div class="card-title">
-          <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
-          <span class="pull-right" style="margin-right:18px">
+  <!-- Matrix Dashboard Grid Template Begin -->
+  <div style="display:none">
+    <div class="grid-stack-item-content" id='draggableTemplate'>
+      <div class="card card-mini" style="box-shadow: none;height:90%">
+        <div class="card-header" style="padding: 8px 0px 0px 16px;">
+          <div class="card-title">
+            <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
+            <span class="pull-right" style="margin-right:18px">
           <button type="button" class=" btn btn-default btn-xs pull-right remove-drag" title="" style="border-color: #fff;">
             <div class="title"><i class="fa fa-remove"></i></div>
           </button>
@@ -142,82 +85,42 @@
             <div class="title"><i class="fa fa-lock"></i></div>
           </button>
           </span>
+          </div>
+        </div>
+        <div class="card-body" style="height:100%">
+          <div class="draggableTemplateContext" style="height:100%"></div>
         </div>
       </div>
-      <div class="card-body" style="height:100%">
-        <div class="draggableTemplateContext" style="height:100%"></div>
-      </div>
     </div>
-
-
   </div>
-</div>
+  <!-- Matrix Dashboard Grid Template End -->
 
-<div class="modal fade" id="popupModalPro" tabindex="-1" role="dialog" aria-labelledby="matrixModalLabel">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <i class="fa fa-power-off"></i> &nbsp; <span class="modal-title" id="popupModalLabelPro"></span>
-      </div>
-      <div class="modal-body">
-        <div id="modalContentDIVPro"></div>
+  <!-- Matrix Modal Template Begin -->
+  <div class="modal fade" id="popupModalPro" tabindex="-1" role="dialog" aria-labelledby="matrixModalLabel">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <i class="fa fa-power-off"></i> &nbsp; <span class="modal-title" id="popupModalLabelPro"></span>
+        </div>
+        <div class="modal-body">
+          <div id="modalContentDIVPro"></div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
+<!-- Matrix Modal Template End -->
 
 <script>
-  var test_copy = function() {
-    console.log("test copy");
-    var context_div_clone = $('#tools').clone().removeAttr('id');
-    context_div_clone.attr('id', 'yangliutestDIV');
-    context_div_clone.css('display', '');
-    add_content_div(context_div_clone, 0, 0, 6, 3);
+  setTimeout(function() {
+    setup_default_workbench();
+  }, 200);
+  var viewModel;
+  function init_ko() {
+    viewModel = new DashboardViewModel();
+    // ko.cleanNode($('#main_content_div')[0]);
+    ko.applyBindings(viewModel, document.getElementById('dashboard_content_div'));
   }
-  var test_display = function() {
-    add_css_class('dragContainer_div', 'dragContainer')
-  }
-  var test_undisplay = function() {
-    remove_css_class('dragContainer_div', 'dragContainer')
-  }
-
-  $(function() {
-    var options = {
-      alwaysShowResizeHandle: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent),
-      resizable: {
-        handles: 'e, se, s, sw, w'
-      },
-      width: 12,
-      float: false,
-      removable: '.trash',
-      removeTimeout: 100,
-      acceptWidgets: '.grid-stack-item'
-    };
-    $('.grid-stack').gridstack(options);
-
-    initialize_workbench();
-  });
-
-  var chart;
-
-  function initialize() {
-    chart = ChartPOJO.generate_default_chart('tutorial_chart');
-
-    var x_Axis_data = [2013, 2014, 2015, 2016, 2017];
-    var series_name = 'GDP';
-    var series_data = [20, 30, 30, 50, 80];
-    chart = Descartes_ChartPOJO.initialize_chart(chart, 'bar', false, x_Axis_data, series_name, series_data);
-    chart = ChartPOJO.addSeries(chart, "KPI", "bar", [60, 90, 10, 80, 70]);
-    chart = ChartPOJO.addSeries(chart, "AI", "bar", [10, 20, 30, 40, 50]);
-    chart = ChartPOJO.addSeries(chart, "BI", "bar", [10, 20, 30, 40, 50]);
-    chart = ChartPOJO.addStack(chart, "Science", "BI");
-    chart = ChartPOJO.addStack(chart, "Science", "AI");
-    chart = ChartPOJO.addStack(chart, "Economy", "GDP");
-    chart = ChartPOJO.addStack(chart, "Economy", "KPI");
-
-  }
-
-  initialize();
+  init_ko();
 </script>
