--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/dashboard/dashboard_content.html
@@ -26,12 +26,12 @@
         <div class="card-header">
           <div class="card-title">
             <i class="fa fa-diamond">&nbsp;Dashboard Editor&nbsp;&nbsp;&nbsp;</i>
-            <button title="New" type="button" onclick="" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-paint-brush"></i></button>
-            <button title="" type="button" onclick="add_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
-            <button title="" type="button" onclick="remove_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
-            <button id="button_save" title="Save(shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
-            <button title="Insert a chart cell(shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
-
+            <button title="New(alt+shift+n)" type="button" onclick="ModalUtil.popup_modal('New report', '/assets/self-owned/html/dashboard/modal_content_new.html', null, null, null);" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-edit"></i></button>
+            <button title="View Grid(alt+shift+v)" type="button" onclick="add_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
+            <button title="Unview Grid(alt+shift+u)" type="button" onclick="remove_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
+            <button id="button_save" title="Save(alt+shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
+            <button title="Insert a chart cell(alt+shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
+            <button title="Refresh(alt+shift+r)" type="button" onclick="refresh_workbench()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-refresh"></i></button>
             <span class="pull-right" style="margin-right:18px">
             <button type="button" class="btn btn-warning" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:hasNewContent">Modified</button>
             <button type="button" class="btn btn-danger" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!name()">Unsaved</button>
@@ -117,10 +117,18 @@
     setup_default_workbench();
   }, 200);
   var viewModel;
+
   function init_ko() {
     viewModel = new DashboardViewModel();
     // ko.cleanNode($('#main_content_div')[0]);
     ko.applyBindings(viewModel, document.getElementById('dashboard_content_div'));
+    window.addEventListener("beforeunload", function(e) {
+      if (viewModel.hasNewContent()) {
+        var confirmationMessage = 'if you see this, you are definitely the chosen one';
+        (e || window.event).returnValue = confirmationMessage; // Gecko and Trident
+        return confirmationMessage; // Gecko and WebKit
+      }
+    });
   }
   init_ko();
 </script>
