--- a/generic_charting_client/src/main/webapp/module_dashboard_gallery_saved_self.html
+++ b/generic_charting_client/src/main/webapp/module_dashboard_gallery_saved_self.html
@@ -70,7 +70,7 @@
                   </span>
                   <span data-bind="text:(function(){return new Date(parseInt(createtime)).toLocaleString()})()" style="margin-right: 8px;"></span>
                   <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}" class="btn btn-default btn-xs" style="margin-right: 3px;"><i class="fa fa-pencil "></i>&nbsp;</button>
-                  <button type="button" data-bind="click:(function(){ModalUtil.popup_modal_with_businessPOJO('Remove report draft', '/assets/self-owned/html/report/modal_content_remove_draft.html',$data);})" class="btn btn-default btn-xs" style="margin-right: 3px;"><i class="fa fa-trash "></i>&nbsp;</button>
+                  <button type="button" data-bind="click:(function(){ModalUtil.popup_modal_with_businessPOJO('Remove Dashboard', '/assets/self-owned/html/dashboard/modal_content_remove.html',$data);})" class="btn btn-default btn-xs" style="margin-right: 3px;"><i class="fa fa-trash "></i>&nbsp;</button>
                 </div>
                 <div class="value">
 
