--- a/generic_charting_client/src/main/webapp/module_dashboard.html
+++ b/generic_charting_client/src/main/webapp/module_dashboard.html
@@ -38,19 +38,369 @@
 
       <div class="seperate_div_class" style="margin-top:118px"></div>
 
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a class="card card-banner card-green-light">
+            <div class="card-body">
+              <i class="icon fa fa-cloud-download fa-4x"></i>
+              <div class="content">
+                <div class="title">Self Saved Charts</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:self_saved_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a class="card card-banner card-blue-light">
+            <div class="card-body">
+              <i class="icon fa fa-share-square-o fa-4x"></i>
+              <div class="content">
+                <div class="title">Self Shared Charts</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:self_shared_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a class="card card-banner card-yellow-light">
+            <div class="card-body">
+              <i class="icon fa fa-share-alt fa-4x"></i>
+              <div class="content">
+                <div class="title">Matrix Shared Charts</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:total_shared_counts"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
 
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a class="card card-banner card-orange-light">
+            <div class="card-body">
+              <i class="icon fa fa-thumbs-o-up fa-4x"></i>
+              <div class="content">
+                <div class="title">Self Saved Dashboards</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:self_saved_counts_dashboard"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a class="card card-banner card-green-light">
+            <div class="card-body">
+              <i class="icon fa fa-shopping-basket fa-4x"></i>
+              <div class="content">
+                <div class="title">Self Shared Dashboards</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:self_shared_counts_dashboard"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <a class="card card-banner card-blue-light">
+            <div class="card-body">
+              <i class="icon fa fa-coffee fa-4x"></i>
+              <div class="content">
+                <div class="title">Matrix Shared Dashboards</div>
+                <div class="value"><span class="sign"></span><span data-bind="text:total_shared_counts_dashboard"></span></div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-12">
           <div class="card">
             <div class="card-header">
               <div class="card-title">
-                <i class="fa fa-diamond">&nbsp;TBD&nbsp;&nbsp;&nbsp;</i>
+                <i class="fa fa-diamond">&nbsp;My Saved Charts&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:self_saved_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;My Shared Charts&nbsp;&nbsp;&nbsp;</i>
+              </div>
 
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:self_shared_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;Shared Charts&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:all_saved_top10">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2viewer($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;My Saved Dashboards&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:self_saved_top10_dashboard">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor_dashboard($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;My Shared Dashboards&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:self_shared_top10_dashboard">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2editor_dashboard($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;Shared Dashboards&nbsp;&nbsp;&nbsp;</i>
+              </div>
+
+            </div>
+            <div class="card-body flat-matrix">
+              <div>
+                <div class="row" data-bind="with:all_saved_top10_dashboard">
+                  <div class="col-xs-12">
+
+                    <table class="table table-striped  table-hover" cellspacing="0" width="100%">
+                      <thead>
+                        <tr>
+                          <th>name</th>
+                          <th>author</th>
+                          <th>time</th>
+                          <th>action</th>
+                        </tr>
+                      </thead>
+                      <tbody data-bind="foreach: viewData">
+                        <tr>
+                          <td>
+                            <span data-bind="text:$data[16]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:$data[4]" />
+                          </td>
+                          <td>
+                            <span data-bind="text:(function(){return new Date(parseInt($data[5])).toLocaleString()})()" />
+                          </td>
+                          <td>
+                            <button type="button" data-bind="event:{click:function(){redirect2viewer_dashboard($data)}}"  class="btn btn-link " title="detail">
+                              <div class="title"><i class="fa fa-barcode fa-1x"></i></div>
+                            </button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="seperate_div_class" style="margin-top:58px"></div>
 
@@ -84,7 +434,6 @@
     <script src="assets/self-owned/js/generic/generic_prototype.js"></script>
     <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
     <script src="assets/self-owned/js/generic/generic_cache.js"></script>
-    <script src="assets/self-owned/js/generic/generic_charting_v4.js"></script>
     <script src="assets/self-owned/js/generic/generic_csv.js"></script>
     <script src="assets/self-owned/js/generic/generic_cud.js"></script>
     <script src="assets/self-owned/js/generic/generic_modal.js"></script>
@@ -94,8 +443,8 @@
     <script src="assets/self-owned/js/generic/generic_validation.js"></script>
     <script src="assets/self-owned/js/generic/generic_workbench.js"></script>
 
-    <script src="assets/self-owned/js/module/dashboard/logic.js"></script>
-    <script src="assets/self-owned/js/module/dashboard/vm.js"></script>
+    <script src="assets/self-owned/js/module/summary/logic.js"></script>
+    <script src="assets/self-owned/js/module/summary/vm.js"></script>
 
 
 
@@ -109,7 +458,8 @@
           $('#navbar_title_li').html('Matrix Chart Dashboard');
         }, 200);
       });
-
+      var viewModel = new DashboardViewModel();
+      ko.applyBindings(viewModel, document.getElementById('main_content_div'));
     </script>
 
 </body>
