--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_pie.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_pie.html
@@ -34,7 +34,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Series</label>
       <div class="col-sm-7">
-          <textarea id="nodes_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;" data-bind="value:series"></textarea>
+          <textarea id="nodes_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;"rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;" data-bind="value:series"></textarea>
       </div>
 
       <div class="col-sm-1">
