--- a/generic_report_client/src/main/webapp/prototype/dashboard.html
+++ b/generic_report_client/src/main/webapp/prototype/dashboard.html
@@ -87,7 +87,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="footer-copyright">
-              Copyright © 2016 MATRIX Company Co,Ltd.
+              Copyright © 2017 MATRIX
             </div>
           </div>
         </div>
