--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_save_draft.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_content_save_draft.html
@@ -221,7 +221,7 @@
 
   function successAddListener_modal() {
     if (arguments && arguments[1]) {
-      console.log(arguments[1]);
+//      console.log(arguments[1]);
       var json = arguments[1].result[0];
       if(reportViewModel){
         reportViewModel.deserialize_report(json);
@@ -238,7 +238,7 @@
 
   function successAddListener_share() {
     if (arguments && arguments[1]) {
-      console.log(arguments[1]);
+//      console.log(arguments[1]);
       var token = arguments[1].result[0]; //ab38e4a4ede0768a8e1b8bde73b3e7a6a893d048a0f3882a68217733ce314240
 
       $.serverRequest($.getServerRoot() + '/service_generic_query/api/share/fetch/' + token, null, "MATRIX_SHARE_SUCCESS", "FAILED_LISTENER", "SERVER_FAILED_LISTENER");
@@ -248,7 +248,7 @@
 
   function failedAddListener_modal() {
     if (arguments && arguments[1]) {
-      console.log(arguments);
+//      console.log(arguments);
       var errorMessage = arguments[1].errorMessage;
       setTimeout(function() {
         genericModalViewModel.response(false, "Entity Operation", "[Failed]", errorMessage);
