--- a/generic_charting_client/src/main/webapp/module_dashboard_gallery_saved_self.html
+++ b/generic_charting_client/src/main/webapp/module_dashboard_gallery_saved_self.html
@@ -34,7 +34,7 @@
     <aside class="app-sidebar" id="sidebar" style="position:fixed;top:0px;"></aside>
     <div class="app-container" id="main_content_div">
 
-      <nav class="navbar navbar-default navbar-fixed-top" id="navbar"></nav>
+      <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
 
       <div class="seperate_div_class" style="margin-top:118px"></div>
 
