--- a/generic_charting_client/src/main/webapp/module_gallery_shared_self.html
+++ b/generic_charting_client/src/main/webapp/module_gallery_shared_self.html
@@ -28,8 +28,7 @@
 
     <div class="app-container" id="main_div">
 
-      <nav class="navbar navbar-default navbar-fixed-top" id="navbar" style="margin-left: 180px;"></nav>
-
+      <nav class="navbar navbar-default" id="navbar"></nav>
 
       <div class="row">
         <div class="col-xs-12" style="margin-bottom:0px">
