Revert "Merge branch 'gloomy_0523' into 'master'"
This reverts merge request !14

--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/datasource/create_data_source.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/datasource/create_data_source.html
@@ -277,7 +277,7 @@
                     "deleted": false,
 //                "name":
                     "stringeta": UserPOJO.user.userName,
-                    "stringalpha": genericModalViewModel.businessPOJO().database.selectedDatabase()[31],
+                    "stringalpha": $.toJSON(ConfigPOJO),
                     "stringbeta": genericModalViewModel.businessPOJO().sql()
                 }
             };
@@ -308,14 +308,14 @@
     <script>
         function getTableInDatabase() {
             if (genericModalViewModel.businessPOJO().database.selectedDatabase() != undefined) {
-//                var ConfigPOJO = {
-//                    "dbType": genericModalViewModel.businessPOJO().database.selectedDatabase()[9],
-//                    "dbDriver": genericModalViewModel.businessPOJO().database.selectedDatabase()[30],
-//                    "dbConName": genericModalViewModel.businessPOJO().database.selectedDatabase()[14],
-//                    "dbUsername": genericModalViewModel.businessPOJO().database.selectedDatabase()[32],
-//                    "dbPasswd": genericModalViewModel.businessPOJO().database.selectedDatabase()[33],
-//                    "dbUrl": genericModalViewModel.businessPOJO().database.selectedDatabase()[31]
-//                }
+                var ConfigPOJO = {
+                    "dbType": genericModalViewModel.businessPOJO().database.selectedDatabase()[9],
+                    "dbDriver": genericModalViewModel.businessPOJO().database.selectedDatabase()[30],
+                    "dbConName": genericModalViewModel.businessPOJO().database.selectedDatabase()[14],
+                    "dbUsername": genericModalViewModel.businessPOJO().database.selectedDatabase()[32],
+                    "dbPasswd": genericModalViewModel.businessPOJO().database.selectedDatabase()[33],
+                    "dbUrl": genericModalViewModel.businessPOJO().database.selectedDatabase()[31]
+                }
                 $.ajax({
                     dataType: "text",
                     type: "POST",
@@ -323,12 +323,11 @@
                     async: false,
                     url: $.getServerRoot() + "/generic_charting_client/api/connection/public/tables",
                     data: {
-                        'DBName': genericModalViewModel.businessPOJO().database.selectedDatabase()[31]
+                        'DBConfig': $.toJSON(ConfigPOJO)
                     }
                 }).done(function (data) {
                     var data = JSON.parse(data);
-                    console.log(data)
-                    var table = data.result[0].split("\n")
+                    var table = data.data.split("\n")
                     table.shift();
                     table.pop();
                     genericModalViewModel.businessPOJO().database.availableTable(table);
@@ -353,11 +352,11 @@
                     async: false,
                     url: $.getServerRoot() + "/generic_charting_client/api/connection/public/" + genericModalViewModel.businessPOJO().database.selectedTable() + "/columns",
                     data: {
-                        'DBName': genericModalViewModel.businessPOJO().database.selectedDatabase()[31]
+                        'DBConfig': $.toJSON(ConfigPOJO)
                     }
                 }).done(function (data) {
                     var data = JSON.parse(data);
-                    var table = data.result[0].split("\n")
+                    var table = data.data.split("\n")
                     table.shift();
                     table.pop();
                     genericModalViewModel.businessPOJO().database.column(table);
