--- a/generic_charting_client/src/main/webapp/module_data_source.html
+++ b/generic_charting_client/src/main/webapp/module_data_source.html
@@ -39,59 +39,10 @@
                 </div>
 
                 <div class='row'>
-                    <div class="col-md-8" id="table_content_div" style="margin-top:118px">
+                    <div class="col-md-8" id="table_content_div" style="margin-top:30px">
                         <div class="card card-mini">
                             <div class="card-body" id="chart_content_body_div" style="min-height:360px">
-                                <div id="main_table" style="width: 100%;height:100%;min-height:600px">
-                                    <div class="table_div_class">
-                                        <div class="row" data-bind="with:datasource">
-                                            <div class="col-xs-12" style="overflow: auto">
-                                                <table class="table table-striped table-hover" cellspacing="0">
-                                                    <thead>
-                                                        <tr>
-                                                            <!-- ko foreach: columnNames -->
-                                                            <th>
-                                                                <span data-bind="text: $data"></span>
-                                                            </th>
-                                                            <!-- /ko -->
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody data-bind="foreach:thinViewData">
-                                                        <tr data-bind="visible:isDisplay,foreach: data">
-                                                            <td data-bind="text: $data"></td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
-
-                                            </div>
-                                            <div class="matrix-pager-v3" data-bind="visible:isDisplayPager">
-                                                <div class="form-inline">
-                                                    <nav>
-                                                        <form>
-                                                            <span class="pull-left">
-                                                                <label class="control-label" style="margin-bottom: 12px;">Total Counts:<span data-bind="text:totalCounts()?totalCounts():0"></span></label>
-                                                            </span>
-                                                        </form>
-                                                        <span class="pull-right">
-                                                            <button data-bind="click:function(){toPage(1);}" type="button" class="btn btn-default " style="padding: 10px 12px;"><i class="fa fa-angle-double-left"></i> &nbsp;First</button>
-                                                            <button data-bind="click:function(){toPage(currentPageNumber()-1);}" type="button" class="btn btn-default " style="padding: 10px 12px;"><i class="fa fa-angle-left"></i> &nbsp;Previous</button>
-                                                            <input data-bind="value:currentPageNumber" type="text" class="form-control" placeholder="Page" style="width:60px;margin-bottom:5px;padding:10px;text-align: center;">
-                                                            <button data-bind="visible:false,click:function(){}" type="submit" class="btn"><span class="fui-search"></span></button>
-                                                            <button data-bind="click:function(){toPage(currentPageNumber()+1);}" type="button" class="btn btn-default " style="padding: 10px 12px;">Next &nbsp;<i class="fa fa-angle-right"></i></button>
-                                                            <button data-bind="click:function(){toPage(totalPage());}" type="button" class="btn btn-default " style="padding: 10px 12px;">Last &nbsp;<i class="fa fa-angle-double-right"></i></button>
-                                                            <div class="btn-group">
-                                                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span data-bind="text:pageMaxSize()"></span> <span class="caret"></span></button>
-                                                                <ul class="dropdown-menu" role="menu" data-bind="foreach: pagingSizeArray">
-                                                                    <li><a data-bind="click:function(){$parent.pageMaxSize($data)}" href="#"><span data-bind="text:$data"></span></a></li>
-                                                                </ul>
-                                                            </div>
-                                                        </span>
-                                                    </nav>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <div id="main_chart" style="width: 100%;height:100%;min-height:800px"></div>
                             </div>
                         </div>
                     </div>
@@ -157,7 +108,6 @@
                                                 <tr>
                                                     <th>ID</th>
                                                     <th style="padding-left: 15px" >SQL</th>
-                                                    <th style="padding-left: 15px">Name</th>
                                                     <th></th>
                                                 </tr>
                                             </thead>
@@ -167,7 +117,6 @@
                                                         runServiceSQL($data);
                                                     }"></td>
                                                     <td data-bind="text:$data[31].length>45 ? $data[31].substring(0,45)+'...': $data[31], attr: {title:$data[31]}" style="padding-left: 15px"></td>
-                                                    <td data-bind="text:$data[14]" style="padding-left: 15px"></td>
                                                     <td>
                                                         <button type="button" class="btn btn-xs btn-default" title="编辑" data-bind="click:(function(){ModalUtil.popup_modal_with_businessPOJO('更新定时作业', '/assets/self-owned/html/timejob/modal_timejob_update.html',$data);})">
                                                             <i class="fa fa-edit fa-1x"></i>
@@ -331,28 +280,10 @@
             }
         </script>
         <script>
-            function runServiceSQL(data) {
+            function runServiceSQL(data){
                 console.log(data);
-                var requestPOJO = {
-                    "dbName": data[30],
-                    "sql": data[31]
-                }
-                var requestData = {
-                    "queryInfo": $.toJSON(requestPOJO)
-                }
-                $.serverRequest($.getServerRoot() + '/generic_charting_client/api/connection/query', requestData, "successRunSql",
-                        "failedRunSql", "serverRunSql");
-                $.subscribe("successRunSql", successRunSql);
-                function successRunSql() {
-                    if (arguments && arguments[1]){
-                        var table_data = DataTransferPOJO.serverData2TableData(arguments[1].result[0]);
-                                tableModel.buildData(table_data.result);
-        tableModel.columnNames(table_data.header);
-        tableModel.isDisplayPager(true);
-        tableModel.buildView();
-        tableModel.pageMaxSize(10);
-                        console.log(table_data);
-                    }
+                var data = {
+                    
                 }
             }
         </script>
@@ -362,13 +293,10 @@
 
             var dataViewModel = new ServerPagingViewModel();
             dataViewModel.retrieveData = retrieveDataSource;
-            
-            var tableModel = new ThinListViewModel();
 
             var SourceViewModel = {
                 databases: databaseViewModel,
-                sqlsources: dataViewModel,
-                datasource: tableModel
+                sqlsources: dataViewModel
             }
             ko.cleanNode($('#contentDIV'));
             ko.applyBindings(SourceViewModel, document.getElementById('contentDIV'));
